refactor: todo/msg查询，超管需要特殊处理
todo/msg app列表改为直接查询授权列表，避免性能问题